--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </div>
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/nishit-nalin-srivastava-65a877176/">LinkedIn</a>
+      <a class="footer-link" href="https://www.codewars.com/users/nnalin04">CodeWar</a>
+      <a class="footer-link" href="https://www.hackerrank.com/nnalin04">HackerRank</a>
       <p class="bottom">© 2020 Nishit Nalin Srivastava.</p>
     </div>
   </body>
